--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,28 @@
-streamlit
-pandas
-numpy
-scikit-learn
-sqlalchemy
-pymysql
-torch
-plotly
-reportlab
+# Web framework & UI
+streamlit>=1.32.0
+
+# Data handling
+pandas>=2.1.0
+plotly>=5.18.0
+
+# Database ORM
+sqlalchemy>=2.0.21
+
+# Authentication & security
+passlib[bcrypt]>=1.7.4
+
+# PostgreSQL driver (if using Postgres)
+psycopg2-binary>=2.9.9
+
+# JSON & API helpers
+python-dateutil>=2.8.2
+
+# Machine Learning
+scikit-learn>=1.3.0
+numpy>=1.26.0
+
+# PDF generation
+reportlab>=4.0.6
+
+# Environment variables
+python-dotenv>=1.0.0
